--- a/index.html
+++ b/index.html
@@ -18,6 +18,28 @@
                 /*space outside the border*/
                 margin: 50px;
             }
+            a:link {
+            color: green;
+            background-color: transparent;
+            text-decoration: none;
+            }
+            a:link, a:visited {
+            background-color: #f44336;
+            color: white;
+            padding: 15px 25px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            }
+
+a:hover, a:active {
+  background-color: red;
+}
+            a:active {
+              color: yellow;
+              background-color: transparent;
+              text-decoration: underline;
+            }
         </style>
     </head>
     <body>
@@ -26,6 +48,8 @@
         <a href="https://www.w3schools.com">Visit W3Schools</a>
         <p title="I'm a tooltip">This is a paragraph.</p>
         <p>This is<br>a paragraph<br>with line breaks.</p>
+        
+<h2 id="C4">Chapter 4</h2>
 
         <pre>
             My Bonnie lies over the ocean.
@@ -71,6 +95,14 @@
         <h1 style="border:2px solid DodgerBlue;">Hello World</h1>
         <h1 style="border:2px solid Violet;">Hello World</h1> 
 
+         <a href="https://www.w3schools.com/" target="_parent">Visit W3Schools!</a> 
+         <p><a href="html_images.asp">HTML Images</a></p>
+         <a href="mailto:someone@example.com">Send email</a> 
 
+         <a href="#C4">Jump to Chapter 4</a> 
+        <a href="html_demo.html#C4">Jump to Chapter 4</a>
+         <a href="default.asp">
+  <img src="smiley.gif" alt="HTML tutorial" style="width:42px;height:42px;">
+</a> 
     </body>
 </html>
