--- a/Jumbled/index2.html
+++ b/Jumbled/index2.html
@@ -46,7 +46,7 @@
 
   <body>
     <h1>DROPDOWN TUTORIAL</h1>
-    <div class="dropdown">
+    <div class="dropdown" style="float:right"> <!--can add floating here-->
       <button class="dropbtn">Dropdown Menu</button>
       <div class="dropdown-content">
         <a href="#">Link1</a>
